@@ -17,6 +17,10 @@
  */
 package de.fraunhofer.iosb.ilt.sta.model;
 
+import com.fasterxml.jackson.databind.node.IntNode;
+import com.fasterxml.jackson.databind.node.JsonNodeFactory;
+import com.fasterxml.jackson.databind.node.ObjectNode;
+import com.fasterxml.jackson.databind.node.TextNode;
 import de.fraunhofer.iosb.ilt.sta.messagebus.EntityChangedMessage;
 import de.fraunhofer.iosb.ilt.sta.model.core.AbstractDatastream;
 import de.fraunhofer.iosb.ilt.sta.model.core.AbstractEntity;
@@ -78,15 +82,15 @@ public class TestIsSetProperty {
         propertyValues.put(EntityProperty.NAME, "myName");
         propertyValues.put(EntityProperty.OBSERVATIONTYPE, "my Type");
         propertyValues.put(EntityProperty.OBSERVEDAREA, new Polygon(new LngLatAlt(0, 0), new LngLatAlt(1, 0), new LngLatAlt(1, 1)));
-        Map<String, Object> parameters = new HashMap<>();
+        ObjectNode parameters = JsonNodeFactory.instance.objectNode();
         parameters.put("key1", "value1");
         parameters.put("key2", 2);
         propertyValues.put(EntityProperty.PARAMETERS, parameters);
         propertyValues.put(EntityProperty.PHENOMENONTIME, TimeInstant.now());
         propertyValuesAlternative.put(EntityProperty.PHENOMENONTIME, TimeInterval.parse("2014-03-02T13:00:00Z/2014-05-11T15:30:00Z"));
         propertyValues.put(EntityProperty.PROPERTIES, parameters);
-        propertyValues.put(EntityProperty.RESULT, 42);
-        propertyValues.put(EntityProperty.RESULTQUALITY, "myQuality");
+        propertyValues.put(EntityProperty.RESULT, new IntNode(42));
+        propertyValues.put(EntityProperty.RESULTQUALITY, new TextNode("myQuality"));
         propertyValues.put(EntityProperty.RESULTTIME, TimeInstant.now());
         propertyValuesAlternative.put(EntityProperty.RESULTTIME, TimeInterval.parse("2014-03-01T13:00:00Z/2014-05-11T15:30:00Z"));
         propertyValues.put(EntityProperty.SELFLINK, "http://my.self/link");
@@ -204,11 +208,11 @@ public class TestIsSetProperty {
         try {
             Class<? extends Entity> typeClass = type.getImplementingClass();
 
-            Entity entity = typeClass.newInstance();
+            Entity entity = typeClass.getConstructor().newInstance();
             for (Property p : collectedProperties) {
                 addPropertyToObject(entity, p);
             }
-            Entity entityEmpty = typeClass.newInstance();
+            Entity entityEmpty = typeClass.getConstructor().newInstance();
 
             EntityChangedMessage message = new EntityChangedMessage();
             entityEmpty.setEntityPropertiesSet(entity, message);
@@ -218,7 +222,7 @@ public class TestIsSetProperty {
             entityEmpty.setEntityPropertiesSet(entityEmpty, message);
             testPropertiesChanged(message, collectedProperties, entityEmpty, false);
 
-        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException ex) {
+        } catch (InvocationTargetException | IllegalArgumentException | InstantiationException | IllegalAccessException | NoSuchMethodException ex) {
             LOGGER.error("Failed to access property.", ex);
             Assert.fail("Failed to access property: " + ex.getMessage());
         }
